fix alignment of the search result

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -50,7 +50,7 @@
   border-top: none;
   color: #333;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-start;
   flex-direction: row;
   padding: 0 2rem;
   transition: background .3s ease;
@@ -120,10 +120,11 @@ p {
 /* 3 Entry */
 
 .firstEntry {
-  flex-basis: 20%;
+  flex-basis: 15%;
 }
 
 .secondEntry {
+  flex-basis: 50%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
